# Reversi

./: CMakeLists.txt  GameBoard.cpp  GameBoard.h  IPlayer.h  Judge.cpp  Judge.h  main.cpp
Players/: IPlayer.cpp  IPlayer.h  MainPlayer.cpp  MainPlayer.h  MaxMovePlayer.cpp  MaxMovePlayer.h  RandomPlayer.cpp  RandomPlayer.h
